# MistWANPerformance

./: .dockerignore  .env.example  .gitignore  Dockerfile  ProjectGoals.md  README.md  TODO.md  agents.md  check_ports.py  docker-compose.yml  entrypoint.sh  gunicorn_config.py  pyproject.toml  pyrightconfig.json  redis.conf  requirements.txt  run_dashboard.py  test_api.py  test_real_data.py  test_sle.py  wsgi.py
.github/: copilot-instructions.md
data/cache/: .gitkeep
data/exports/: .gitkeep
data/logs/: .gitkeep
src/: __init__.py  main.py
src/aggregators/: __init__.py  time_aggregator.py
src/api/: __init__.py  async_mist_client.py  mist_client.py
src/cache/: __init__.py  async_precompute.py  background_refresh.py  dashboard_precompute.py  redis_cache.py  site_precompute.py
src/calculators/: __init__.py  kpi_calculator.py  threshold_calculator.py
src/collectors/: __init__.py  quality_collector.py  sle_collector.py  status_collector.py  utilization_collector.py
src/dashboard/: __init__.py  app.py  data_provider.py
src/loaders/: __init__.py  snowflake_loader.py
src/models/: __init__.py  dimensions.py  facts.py
src/utils/: __init__.py  config.py  logging_config.py  performance.py
src/views/: __init__.py  current_state.py  rankings.py
tests/: __init__.py  test_async_mist_client.py  test_background_refresh.py  test_kpi_calculator.py  test_threshold_calculator.py  test_time_aggregator.py  test_views.py
